Change audio source from WAV to MP3 format

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       left: 0,
       behavior: 'smooth'
     })"></div>
-    <audio src="./assets/ping.wav" id="pinger"></audio>
+    <audio src="./assets/ping.mp3" id="pinger"></audio>
     <noscript>Your browser does not support the world of Cosmos!</noscript>
     <div id="output"></div>
     <script src="./client.js"></script>
