--- a/info.html
+++ b/info.html
@@ -29,19 +29,24 @@ a:active {
 </style>
     <title id="title">Cosmos Info</title>
     <link rel="icon" type="image/x-icon" href="./assets/emoji.svg">
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu&subset=cyrillic,latin' rel='stylesheet' type='text/css' />
+<style type="text/css" >
+    body {
+        font-family : 'Ubuntu', sans-serif;
+        font-weight: normal;
+    }
+</style>
 </head>
 <body>
     <script src="./info.js"></script>
     <p>
-        <strong> Cosmos Info </strong><br>
+        <img src="./assets/Cosmos-Logo.png" alt="TutorialsPoint Logo"/><br>
         built off Harmony<br>
         Managed by Aether<br>
         Harmony 1.0.0 server hosted by windnedr<br>
-        Cosmos Build: Beta<br>
-        Release Date: 12/03/2025<br>
-        Cosmos Update: Original Beta Release<br>
-        This build is recommended for developers and testers<br>
-        Please report any bugs that are found<br>
+        Cosmos Build: Offical<br>
+        Release Date: 02/17/2025<br>
+        Cosmos Update: Original Offical Release<br>
         <br>
         <strong>Thank You to these people for making this possible:</strong><br>
         windnedr: for code of Harmony and coding help<br>
@@ -52,7 +57,7 @@ a:active {
 </body>
 <footer>
     <p>
-Harmony Verion 1.0.0 ~ Cosmos Version 1.0.0b<br>
+Harmony Verion 1.0.0 ~ Cosmos Version 1.0.0<br>
 The Cosmos Project by Aether<br>  <a href="https://github.com/GoldenAether/The-Cosmos-Project">Github</a>
     </p>
 </footer>
